--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 h1 {
     font-size: 50px;
+    
+}
+.yellow {
+    color: orange;
+}
+section {
+    display: flex;
+    padding: 20px;
+}
+.half-width{
+    width: 50%;
+}
+.half-width img {
+    width: 100%;
+    padding-left: 5px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    color: white;
+    font-weight: 700;
+    padding: 10px 40px;
+    border-radius: 5px;
+
+}
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
