--- a/style.css
+++ b/style.css
@@ -6,16 +6,17 @@ h1 {
     font-size: 50px;
     
 }
-.yellow {
+.orange-color {
     color: orange;
 }
-section {
+.flrexible-container {
     display: flex;
     padding: 20px;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
+    padding-left: 2%;
 }
 .half-width img {
     width: 80%;
@@ -46,4 +47,30 @@ section {
     background-repeat: no-repeat;
     background-position: right;
     padding: 10px;
+}
+.experience-aria{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item {
+    box-shadow: 10px 10px 30px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 30px;
+    border-radius: 10px;
+}
+#web-dev-exp{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#full-stack-exp {
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
